// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component Should match a skin snapshot 1`] = `
.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c4 {
  color: #424242;
  margin-left: 0;
}

.c10 .c1 > .c5 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c5 .c4 {
  color: #1250C4;
  margin-left: 0;
}

.c11 .c1 > .c5 {
  color: #004D40;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c11 .c1 > .c5 .c4 {
  color: #004D40;
  margin-left: 0;
}

.c12 .c1 > .c5 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c12 .c1 > .c5 .c4 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      neutral
    </span>
    <button
      class="c3 c4 c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 2`] = `
.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c10 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c5 .c4 {
  color: #424242;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #E5EDFC;
  border: 1.5px solid #1250C4;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c5 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c4 {
  color: #1250C4;
  margin-left: 0;
}

.c11 .c1 > .c5 {
  color: #004D40;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c11 .c1 > .c5 .c4 {
  color: #004D40;
  margin-left: 0;
}

.c12 .c1 > .c5 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c12 .c1 > .c5 .c4 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      blue
    </span>
    <button
      class="c3 c4 c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 3`] = `
.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c10 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c5 .c4 {
  color: #424242;
  margin-left: 0;
}

.c11 .c1 > .c5 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c11 .c1 > .c5 .c4 {
  color: #1250C4;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #dcedc8;
  border: 1.5px solid #004D40;
  color: #004D40;
  padding: 12px 16px;
}

.c0 .c1 > .c5 {
  color: #004D40;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c4 {
  color: #004D40;
  margin-left: 0;
}

.c12 .c1 > .c5 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c12 .c1 > .c5 .c4 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      success
    </span>
    <button
      class="c3 c4 c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 4`] = `
.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c10 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c5 .c4 {
  color: #424242;
  margin-left: 0;
}

.c11 .c1 > .c5 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c11 .c1 > .c5 .c4 {
  color: #1250C4;
  margin-left: 0;
}

.c12 .c1 > .c5 {
  color: #004D40;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c12 .c1 > .c5 .c4 {
  color: #004D40;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #ffefd6;
  border: 1.5px solid #f09100;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c5 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c4 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      warning
    </span>
    <button
      class="c3 c4 c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 5`] = `
.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c4 {
  color: #424242;
  margin-left: 0;
}

.c10 .c1 > .c5 {
  color: #1250C4;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c10 .c1 > .c5 .c4 {
  color: #1250C4;
  margin-left: 0;
}

.c11 .c1 > .c5 {
  color: #004D40;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c11 .c1 > .c5 .c4 {
  color: #004D40;
  margin-left: 0;
}

.c12 .c1 > .c5 {
  color: #f09100;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c12 .c1 > .c5 .c4 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      error
    </span>
    <button
      class="c3 c4 c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot of a simple alert 1`] = `
.c9 {
  pointer-events: none;
  width: 24px;
}

.c9.with-children {
  margin-right: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c3:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c3:focus,
.c3:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c3:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c6 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c6 .c8 {
  margin-right: 0;
}

.c6:hover,
.c6:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c6:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c7:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c4 {
  color: #424242;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      Sample alert
    </span>
    <button
      class="c3 c4 c5 c6 c7"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c8 c9"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot with an icon 1`] = `
.c11 {
  pointer-events: none;
  width: 24px;
}

.c11.with-children {
  margin-right: 8px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c5:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c5:focus,
.c5:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c5:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c8 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c8 .c10 {
  margin-right: 0;
}

.c8:hover,
.c8:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c8:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg + span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  width: 24px;
}

.c9 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c9:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 .c3 {
  color: #424242;
  margin-right: 16px;
}

.c0 .c1 > .c7 {
  color: #424242;
  margin: 0 0 0 16px;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c7 .c6 {
  color: #424242;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root c3 c4"
      data-qtm-preloader="icon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <span>
      Sample alert
    </span>
    <button
      class="c5 c6 c7 c8 c9"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c10 c11"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
